# SAT-Solver

./: .gitignore  README.md  sat-solver.cabal
app/: Main.hs
src/: Formula.hs  Normalize.hs  Solver.hs
test/: Spec.hs  TestUtils.hs
